// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`.not.toBeObject fails when given an object 1`] = `
"expect(received).not.toBeObject()

Expected value to not be an object, received:
  {}"
`;

exports[`.toBeObject fails when not given an object:  1`] = `
"expect(received).toBeObject()

Expected value to be an object, received:
  \\"\\""
`;

exports[`.toBeObject fails when not given an object: 0 1`] = `
"expect(received).toBeObject()

Expected value to be an object, received:
  0"
`;

exports[`.toBeObject fails when not given an object: 1,2,3 1`] = `
"expect(received).toBeObject()

Expected value to be an object, received:
  [1, 2, 3]"
`;

exports[`.toBeObject fails when not given an object: NaN 1`] = `
"expect(received).toBeObject()

Expected value to be an object, received:
  NaN"
`;

exports[`.toBeObject fails when not given an object: false 1`] = `
"expect(received).toBeObject()

Expected value to be an object, received:
  false"
`;

exports[`.toBeObject fails when not given an object: undefined 1`] = `
"expect(received).toBeObject()

Expected value to be an object, received:
  [Function anonymous]"
`;

exports[`.toBeObject fails when not given an object: undefined 2`] = `
"expect(received).toBeObject()

Expected value to be an object, received:
  undefined"
`;
